# newScheduleBot

./: .gitignore  README.md  background.py  database.py  keyboards.py  main.py  messages.py  pyproject.toml  requirements.txt  sheets.py
.qodo/: history.sqlite
databases/: schedule.db  teachers.db  users.db
