[project]
name = "newschedulebot"
version = "1.0.1"
description = "Here is the school schedule bot in telegram by @montaanaq"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram==2.25.1",
    "apscheduler==3.10.4",
    "fastapi==0.115.8",
    "google-api-python-client==2.160.0",
    "httplib2==0.22.0",
    "oauth2client==4.1.3",
    "python-dotenv==1.0.1",
    "uvicorn==0.34.0",
]
